--- a/src/table/styles.scss
+++ b/src/table/styles.scss
@@ -53,7 +53,6 @@
 
 .table {
   inline-size: 100%;
-  block-size: 100%;
   border-spacing: 0;
   position: relative;
   box-sizing: border-box;
